--- a/glsys/sx.Service/sx.Service.csproj
+++ b/glsys/sx.Service/sx.Service.csproj
@@ -65,6 +65,7 @@
     <Compile Include="DicService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
+    <Compile Include="supplierService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
