--- a/glsys/sxpos/sxpos.csproj
+++ b/glsys/sxpos/sxpos.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="Funs\Constant.cs" />
     <Compile Include="Funs\GridUtil.cs" />
+    <Compile Include="Funs\SpellingUtil.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +134,12 @@
     </Compile>
     <Compile Include="Manage\SupplierList.Designer.cs">
       <DependentUpon>SupplierList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manage\SupplierMng.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manage\SupplierMng.Designer.cs">
+      <DependentUpon>SupplierMng.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -174,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Manage\SupplierList.resx">
       <DependentUpon>SupplierList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manage\SupplierMng.resx">
+      <DependentUpon>SupplierMng.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
