增加Model 增加db table

--- a/glsys/sx.Model/sx.Model.csproj
+++ b/glsys/sx.Model/sx.Model.csproj
@@ -62,7 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="postGoods.cs" />
+    <Compile Include="posGoodsIn.cs" />
+    <Compile Include="posGoods.cs" />
+    <Compile Include="pos_StockLog.cs" />
     <Compile Include="pos_Supplier.cs" />
     <Compile Include="pos_SupplierEx.cs" />
     <Compile Include="pos_SupplierGoods.cs" />
