--- a/glsys/sx.Service/sx.Service.csproj
+++ b/glsys/sx.Service/sx.Service.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DicService.cs" />
+    <Compile Include="GoodsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
     <Compile Include="supplierService.cs" />
