销售界面功能更新

--- a/glsys/sx.Model/sx.Model.csproj
+++ b/glsys/sx.Model/sx.Model.csproj
@@ -62,8 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="pos_OrderDetail.cs" />
+    <Compile Include="pos_MemberCostume.cs" />
     <Compile Include="posGoodsIn.cs" />
     <Compile Include="posGoods.cs" />
+    <Compile Include="pos_Member.cs" />
+    <Compile Include="pos_Order.cs" />
     <Compile Include="pos_StockLog.cs" />
     <Compile Include="pos_Supplier.cs" />
     <Compile Include="pos_SupplierEx.cs" />
