--- a/glsys/sxpos/sxpos.csproj
+++ b/glsys/sxpos/sxpos.csproj
@@ -151,6 +151,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sale\MemberSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sale\MemberSelect.Designer.cs">
+      <DependentUpon>MemberSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="sale\saleForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="sale\MemberSelect.resx">
+      <DependentUpon>MemberSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="sale\saleForm.resx">
       <DependentUpon>saleForm.cs</DependentUpon>
     </EmbeddedResource>
