--- a/glsys/sx.Service/sx.Service.csproj
+++ b/glsys/sx.Service/sx.Service.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="DicService.cs" />
     <Compile Include="GoodsService.cs" />
+    <Compile Include="MemberService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
     <Compile Include="supplierService.cs" />
